--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.h31ix.ipsecurity</groupId>
     <artifactId>IPSecurity</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
     <name>IPSecurity</name>
     <url>http://H31IX.NET/</url>
     <repositories>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.2.5-R1.0</version>
+            <version>LATEST</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
